design stretch fixed ,footer fixed

--- a/assign1.css
+++ b/assign1.css
@@ -25,6 +25,7 @@ float: right;
   color: blue;
   text-decoration: none;
   font-size: 15px;
+  margin: 5px;
 
 }
 
@@ -161,4 +162,5 @@ input[type=submit]{
     text-decoration: none;
     padding: 10px;
     color: white;
+  margin-right: 3px;
 }
